# rustcoon

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  compose.dev.yml
.github/workflows/: ci.yml
apps/rustcoon/: Cargo.toml
apps/rustcoon/src/: main.rs  monolith.rs
config/: application-entities.example.toml  application-entity-registry.example.toml  rustcoon.example.toml
crates/adapter-index-postgres/: Cargo.toml
crates/adapter-index-postgres/src/: config.rs  error.rs  lib.rs  read.rs  store.rs  write.rs
crates/adapter-index-postgres/src/query/: compile.rs  mod.rs
crates/adapter-index-postgres/src/schema/: tables.rs
crates/adapter-index-sqlite/: Cargo.toml
crates/adapter-index-sqlite/src/: config.rs  error.rs  lib.rs  read.rs  store.rs  write.rs
crates/adapter-index-sqlite/src/query/: compile.rs  mod.rs
crates/adapter-index-sqlite/src/schema/: attributes.rs  mod.rs
crates/adapter-storage-filesystem/: Cargo.toml
crates/adapter-storage-filesystem/src/: lib.rs
crates/adapter-storage-replicated/: Cargo.toml
crates/adapter-storage-replicated/src/: lib.rs
crates/app-ingest/: Cargo.toml
crates/app-ingest/src/: error.rs  instrumentation.rs  keying.rs  lib.rs  model.rs  service.rs
crates/app-query/: Cargo.toml
crates/app-query/src/: error.rs  instrumentation.rs  lib.rs  model.rs  service.rs
crates/app-retrieve/: Cargo.toml
crates/app-retrieve/src/: error.rs  instrumentation.rs  lib.rs  model.rs  service.rs
crates/config/: Cargo.toml
crates/config/src/: application_entity.rs  filesystem.rs  lib.rs  load.rs  observability.rs  storage.rs
crates/domain-application-entity/: Cargo.toml
crates/domain-application-entity/src/: error.rs  lib.rs  model.rs  registry.rs  route.rs  title.rs
crates/domain-application-entity/tests/: association_routing_it.rs
crates/domain-dicom/: Cargo.toml
crates/domain-dicom/src/: error.rs  identity.rs  lib.rs  metadata.rs  record.rs  uid.rs
crates/observability/: Cargo.toml
crates/observability/src/: init.rs  lib.rs
crates/observability/src/metrics/: mod.rs  ul.rs
crates/observability/src/spans/: app.rs  mod.rs  ul.rs
crates/platform-config/: Cargo.toml
crates/platform-config/src/: application_entity.rs  database.rs  error.rs  lib.rs  monolith.rs  runtime.rs  storage.rs  telemetry.rs
crates/platform-config/src/app/: application_entity_registry.rs  mod.rs  monolith.rs
crates/platform-config/src/component/: app.rs  application_entities.rs  grpc.rs  mod.rs  runtime.rs  telemetry.rs
crates/platform-orchestration/: Cargo.toml
crates/platform-orchestration/src/: error.rs  lib.rs
crates/platform-orchestration/src/app/: ingest.rs  mod.rs  query.rs  retrieve.rs
crates/platform-orchestration/src/core/: bootstrap.rs  error.rs  mod.rs
crates/platform-orchestration/src/infrastructure/: index.rs  mod.rs  storage.rs
crates/platform-orchestration/src/platform/: config.rs  mod.rs  runtime.rs  telemetry.rs
crates/platform-orchestration/src/protocols/: dimse.rs  mod.rs
crates/platform-orchestration/src/service/: application_entity_registry.rs  mod.rs
crates/platform-runtime/: Cargo.toml
crates/platform-runtime/src/: app.rs  config.rs  error.rs  instrumentation.rs  lib.rs  runtime.rs
crates/platform-telemetry/: Cargo.toml
crates/platform-telemetry/src/: error.rs  global.rs  guard.rs  init.rs  lib.rs
crates/ports-index/: Cargo.toml
crates/ports-index/src/: attribute_path.rs  document.rs  error.rs  lib.rs  predicate.rs  query.rs  read.rs  write.rs
crates/ports-storage/: Cargo.toml
crates/ports-storage/src/: delete.rs  error.rs  key.rs  lib.rs  metadata.rs  read.rs  write.rs
crates/protocols-dimse/: Cargo.toml
crates/protocols-dimse/src/: context.rs  error.rs  error_handler.rs  instrumentation.rs  lib.rs  listener.rs
crates/protocols-dimse/src/message/: mod.rs  reader.rs  writer.rs
crates/protocols-dimse/src/service/: command.rs  mod.rs  registry.rs
crates/protocols-dimse/src/service/query/: find_message.rs  find_provider.rs  mod.rs
crates/protocols-dimse/src/service/retrieve/: common.rs  get_message.rs  get_provider.rs  mod.rs  move_message.rs  move_provider.rs
crates/protocols-dimse/src/service/store/: mod.rs  store_message.rs  store_provider.rs
crates/protocols-dimse/src/service/verification/: echo_message.rs  echo_provider.rs  mod.rs
crates/protocols-dimse/tests/: common.rs  dimse_association_flow_it.rs  query_provider_it.rs  verification_provider_it.rs
crates/protocols-ul/: Cargo.toml
crates/protocols-ul/src/: access_control.rs  association.rs  error.rs  inbound.rs  instrumentation.rs  lib.rs  listener.rs  outbound.rs
crates/protocols-ul/tests/: dimse_flow_it.rs
crates/service-application-entity-registry/: Cargo.toml  build.rs
crates/service-application-entity-registry/proto/: application_entity_registry.proto  application_entity_registry_writer.proto
crates/service-application-entity-registry/src/: application_entity.rs  grpc.rs  lib.rs  registry.rs
crates/ul/: Cargo.toml
crates/ul/src/: lib.rs
crates/ul/src/association/: backend.rs  command_bridge.rs  driver.rs  error.rs  mod.rs
crates/util-derive/: Cargo.toml
crates/util-derive/src/: getters.rs  lib.rs  new.rs
crates/util-derive/tests/: getters.rs  new.rs
deploy/: otel-collector-config.dev.yaml  prometheus.dev.yml
migrations/postgres/: 20250209050718_initial_studies_schema.down.sql  20250209050718_initial_studies_schema.up.sql  20260410120000_index_schema.sql
migrations/sqlite/: 20250209050718_initial_studies_schema.down.sql  20250209050718_initial_studies_schema.up.sql  20260412120000_index_schema.sql
src/: config.rs  main.rs
src/common/: database.rs
src/studies/: error.rs  mod.rs
src/studies/api/: mod.rs  retrieve.rs  search.rs  store.rs
src/studies/models/: instance.rs  mod.rs  series.rs  study.rs
src/studies/services/: mod.rs  retrieve.rs  search.rs  store.rs  utils.rs
src/studies/services/retrieve/: instance.rs  metadata.rs  pixeldata.rs  rendered.rs
src/utils/: dicom.rs  mod.rs  multipart.rs
(+4 files in other folders)
