[package]
name = "rustcoon"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.28", features = ["derive", "env"] }
dotenvy = "0.15.7"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "time", "uuid"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[features]
default = ["migrate", "postgres", "sqlite"]
migrate = ["sqlx/migrate"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
