[package]
name = "rustcoon-index-postgres"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
dicom-core = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-json = "0.9.0"
dicom-object = "0.9.1"
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "json"] }
thiserror = "2.0.18"

rustcoon-dicom = { path = "../domain-dicom" }
rustcoon-index = { path = "../ports-index" }
rustcoon-storage = { path = "../ports-storage" }

[dev-dependencies]
tokio = { version = "1.50.0", features = ["macros", "rt"] }
