[package]
name = "rustcoon-storage-filesystem"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
tokio = { version = "1.50.0", features = ["fs", "io-util"] }
uuid = { version = "1.22.0", features = ["v4"] }

rustcoon-storage = { path = "../ports-storage" }

[dev-dependencies]
tempfile = "3.26.0"
tokio = { version = "1.50.0", features = ["macros", "rt", "io-util"] }
