[package]
name = "rustcoon-ingest"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-util"] }
opentelemetry.workspace = true
tracing.workspace = true

rustcoon-dicom = { path = "../domain-dicom" }
rustcoon-index = { path = "../ports-index" }
rustcoon-storage = { path = "../ports-storage" }

[dev-dependencies]
async-trait = "0.1.89"
dicom-core = "0.9.0"
dicom-dictionary-std = "0.9.0"
dicom-object = "0.9.0"
tokio = { version = "1.50.0", features = ["io-util", "macros", "rt"] }
