[package]
name = "rustcoon-query"
version.workspace = true
edition.workspace = true

[dependencies]
dicom-core = "0.9.1"
dicom-dictionary-std = "0.9.0"
dicom-object = "0.9.1"
opentelemetry.workspace = true
thiserror = "2.0.18"
tracing.workspace = true

rustcoon-index = { path = "../ports-index" }

[dev-dependencies]
async-trait = "0.1.89"
rustcoon-dicom = { path = "../domain-dicom" }
tokio = { version = "1.50.0", features = ["macros", "rt"] }
