[package]
name = "rustcoon-platform-orchestration"
version.workspace = true
edition.workspace = true

[dependencies]
rustcoon-platform-config = { path = "../platform-config" }
rustcoon-platform-runtime = { path = "../platform-runtime" }
rustcoon-platform-telemetry = { path = "../platform-telemetry" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["signal"] }
