[package]
name = "rustcoon-platform-telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
opentelemetry.workspace = true
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", features = ["grpc-tonic", "http-proto", "metrics", "trace"] }
thiserror = "2.0.18"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt", "json"] }
