[package]
name = "rustcoon-index"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
dicom-core = "0.9.1"
dicom-object = "0.9.1"
thiserror = "2.0.18"

rustcoon-dicom = { path = "../domain-dicom" }
rustcoon-storage = { path = "../ports-storage" }

[dev-dependencies]
dicom-dictionary-std = "0.9.0"
tokio = { version = "1.50.0", features = ["macros", "rt"] }
