[package]
name = "rustcoon-service-application-entity-registry"
version.workspace = true
edition.workspace = true
build = "build.rs"

[features]
grpc = [
    "dep:opentelemetry",
    "dep:prost",
    "dep:tonic",
    "dep:tonic-prost",
    "dep:tokio",
    "dep:protoc-bin-vendored",
    "dep:tracing-opentelemetry",
    "dep:tonic-prost-build",
]
test-support = []

[dependencies]
async-trait = "0.1.89"
opentelemetry = { workspace = true, optional = true }
prost = { version = "0.14.3", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["sync"], optional = true }
tonic = { version = "0.14.6", optional = true }
tonic-prost = { version = "0.14.6", optional = true }
tracing.workspace = true
tracing-opentelemetry = { version = "0.32.1", optional = true }

[build-dependencies]
protoc-bin-vendored = { version = "3.2.0", optional = true }
tonic-prost-build = { version = "=0.14.6", optional = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
