[package]
name = "ul"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait = "0.1.89"
dicom-ul = { version = "0.9.0", features = ["async"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", default-features = false, features = ["macros", "net", "sync", "time"] }
tracing.workspace = true

observability = { path = "../observability" }

[dev-dependencies]
tokio = { version = "1.49.0", default-features = false, features = ["macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
